# Computer-Use-Agent_Collector

./: .gitignore  CMakeLists.txt  README.md  collector.py  cross_platform_capture.py  implementation_plan.md  run.sh  setup.sh  setup_extension.sh
Dev_log/: 1.md
V1/: README.md  collector.py  platform_backends.py  quickdraw.py  requirements.txt  screenshot_wayland.py  setup.sh  setup_extension.sh
V2/: CMakeLists.txt  README.md  collector_v2.py  run.sh
V2/include/: action_engine.h  ring_buffer.h
V2/src/: action_engine.cpp  bindings.cpp  pipewire_capture.cpp  portal_helper.py  ring_buffer.cpp
V2/tests/: benchmark.cpp  test_stress.py
data/: index.json
data/20260401_142007_b750f4b0/: task.json
include/: action_engine.h  input_monitor.h  pipewire_capture.h
src/: action_engine.cpp  bindings.cpp  input_monitor.cpp  input_monitor_win.cpp  pipewire_capture.cpp  win32_capture.cpp
tests/: benchmark.cpp  test_stress.py
